--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sand Tetris Demo</title>
+    <title>Sand Tetris</title>
     <link rel="icon" type="image/png" href="./logo.png">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -83,10 +83,6 @@
                             <button id="resetbtn" class="btn btn-outline-primary  btn-sm" type="button"><i
                                     class="bi bi-x"></i>
                                 Reset</button>
-
-                            <button id="scrshotbtn" class="btn btn-outline-primary  btn-sm mt-3" type="button"><i
-                                    class="bi bi-file-image"></i> Screenshot</button>
-
                         </div>
                     </div>
                 </div>
@@ -105,14 +101,13 @@
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="difficultyradio" id="difficultyradio2">
                             <label class="form-check-label" for="difficultyradio2">
-                                Expert<br> <span class="small">(No diagonal check)</span>
+                                Expert
                             </label>
                         </div>
 
 
                     </div>
                 </div>
-                <a target="_blank" href="https://sahandbabali.com">sahandbabali.com</a>
 
             </div>
             <div class="col-md-3"></div>
