--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -12,6 +11,47 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <style>
+    body {
+        background-color: #121212; /* blackish */
+        color: #f0f0f0; /* light gray text for contrast */
+    }
+
+    .navbar {
+        background-color: #1e1e1e !important;
+    }
+
+    .card {
+        background-color: #1e1e1e;
+        border-color: #333;
+        color: #f0f0f0;
+    }
+
+    .btn-outline-primary {
+        border-color: #888;
+        color: #ddd;
+    }
+
+    .btn-outline-primary:hover {
+        background-color: #333;
+        border-color: #aaa;
+        color: #fff;
+    }
+
+    .form-check-label,
+    .form-check-input {
+        color: #ccc;
+    }
+
+    a {
+        color: #6fa8dc;
+    }
+
+    a:hover {
+        color: #9fc5e8;
+    }
+</style>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.js"
